# dag2laguerre

./: 3D_Multiplexed_Hypergraph_Visual.ipynb  DAG_to_Hypergraph_to_Power_Diagram.ipynb  DAG_to_Multiplexed_Hypergraph.ipynb  README.md  Voronoi_Power_Diagram_View.ipynb  pyproject.toml
experiments/: adhoc-adjacency-preserving-pd.ipynb
src/dag2laguerre/: PartitionTreeBuilder.py  RecursivePowerDiagram.py  __init__.py  config.py
src/dag2laguerre/coloring/: CentroidColoring.py  HierarchicalFieldColorer.py  __init__.py
src/dag2laguerre/geometry/: HalfplaneClipper.py  PolygonOps.py  __init__.py
src/dag2laguerre/geometry/power_diagram/: CapacityTargets.py  LloydRelaxer.py  PowerDiagram.py  WeightFitter.py  __init__.py
