[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dag2laguerre"
version = "0.1.0"
description = "Recursive hierarchical Laguerre/power diagram visualizations for DAG structures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Isaac Rudnick"}
]
keywords = ["visualization", "power-diagram", "laguerre", "hypergraph", "dag", "hierarchical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "networkx>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
nlp = [
    "nltk>=3.6",
]

[project.urls]
Homepage = "https://github.com/IsaacFigNewton/Multiplexed-Hypergraph-Visualizer"
Repository = "https://github.com/IsaacFigNewton/Multiplexed-Hypergraph-Visualizer"
Issues = "https://github.com/IsaacFigNewton/Multiplexed-Hypergraph-Visualizer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dag2laguerre*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
